--- a/BannerApp/package.json
+++ b/BannerApp/package.json
@@ -6,13 +6,15 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android": "expo build:android",
+    "build:ios": "expo build:ios"
   },
   "dependencies": {
     "expo": "~49.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.0",
+    "react-native": "0.72.10",
     "react-native-paper": "^5.10.0",
     "expo-image-picker": "~14.3.0",
     "expo-font": "~11.4.0"
